<resources>

    <string name="app_name"></string>
    <string name="bannerid">ca-app-pub-7543097816669416/5089776005</string>
    <string name="intersitiid">ca-app-pub-7543097816669416/5356002339</string>
    <string name="Current_Points">Rubles earned </string>
    <string name="Start">Start</string>
    <string name="Points">available money:</string>
    <string name="Current_Cuestion">Question Nr:</string>
    <string name="you_must_choose_an_answer">you must choose an answer</string>
    <string name="Confirm">Confirm</string>
    <string name="Tha">Is Correct!</string>
    <string name="Tha2">Is not Correct!</string>
    <string name="backp">Press again to exit</string>
    <string name="Next">Next</string>
    <string name="espera_un_momento_porfavor">Wait a moment please...</string>
    <string name="payeer_id">Payeer id</string>
    <string name="introduce_el_id_de_tu_cuenta_de_payeer">Enter the ID of your payeer account</string>
    <string name="monto_a_retirar">Amount to withdraw:</string>
    <string name="pago">Payment successful!</string>
    <string name="error">Error!</string>
    <string name="error2">the minimum amount to withdraw is 1 Rub!</string>
    <string name="error3">make sure to place your payeer id correctly if you dont you will lose your reward!</string>
    <string name="gana_1_rublo_cada_vez_que_repondas_10_preguntas_correctamente">Earn 1 Ruble every time you answer 15 questions correctly</string>
    <string name="rate_dialog_title">Support us!</string>
    <string name="rate_dialog_message">If you liked this APP help us to reach more people and value us!</string>
    <string name="rate_dialog_ok">Recommend now!</string>
    <string name="rate_dialog_cancel">Do it later.</string>
    <string name="rate_dialog_no"></string>
    <string name="activeu0">Act. users:</string>
    <string name="retiro">Withdraw</string>
    <string name="wait">wait</string>
    <string name="toreply">seconds to reply</string>
    <string name="yapuedes">you can answer now!</string>
    <string name="monmim">The minimum amount to withdraw is 1 Ruble, Exit the App and try again</string>
    <string name="tudineroser">your money will be sent to:</string>
    <string name="USERUP">User profile updated!</string>
    <string name="mustwait">you must wait</string>
    <string name="mintoret">minutes to make another withdrawal</string>
    <string name="pcontinuar">To continue enter your phone number and your payeer ID</string>
    <string name="preferido">Enter the payeer account id of the user who invited you</string>
    <string name="musretirar">Withdraw my money</string>
    <string name="dialogref">Earn 5 rubles for each user who uses your payeer ID as a referral code</string>
    <string name="infopag">Use the payeer id with which you registered as a referral code, share it with your friends and for each of them registered in the app we will pay you 5 rubles</string>
    <string name="toc">click here to continue</string>
    <string name="mes1">Sorry, we are currently doing some repairs on the payment platform and payments are not available.</string>
    <string name="mes2">Hello, we see that you are using an outdated version of the app, please go to google play and update it, it will only take a couple of minutes.</string>
    <string name="errorenelpag">There was an Error in the payment, wait a moment please!</string>
    <string name="rp">rubles paid:</string>
    <string name="adv">This application works with internet!</string>
    <string name="adv2">If you have a slow internet connection the application may not work properly</string>
    <string name="gana1r">Earn 1 Ruble</string>
    <string name="irap">Go to my profile</string>
    <string name="referidos">Faucet</string>
    <string name="aunno">Earn USD Tether with the faucet</string>
    <string name="dispxref">rubles available to withdraw</string>
    <string name="tienesss">You have</string>
    <string name="msFaucet">this function will be ready soon!</string>
    <string name="porcentaje">Earn 10% of the rubles that your referrals withdraw</string>
    <string name="anuncio">BIZER is an app in development phase therefore it may have flaws in some of its processes</string>
</resources>