<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".retiro">

    <Button
        android:background="@color/trans"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/trans"
        android:layout_alignParentBottom="true"/>

    <WebView
        android:id="@+id/webview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/ccdc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/vbv"/>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tudineroser"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/Black"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/idpa"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/Black"
            android:layout_width="200dp"
            android:layout_height="45dp"
            />

        <TextView
            android:id="@+id/montoaret"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monto_a_retirar"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/Black"
            android:layout_marginBottom="15dp"/>

        <Button
            android:background="@drawable/grad1"
            android:layout_width="200dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/retiro"
            android:textColor="@color/Black"
            android:id="@+id/iniret"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:id="@+id/progresozzz"/>

</LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adUnitId="@string/bannerid">
    </com.google.android.gms.ads.AdView>


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error3"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:layout_above="@+id/adView"
        android:gravity="center"
        android:textColor="@color/Black"
        android:layout_marginBottom="15dp"
      />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/bannerid">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>