<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/polka"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#7A474747" />
    <WebView
        android:id="@+id/webview2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
<LinearLayout
    android:id="@+id/presentacion0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:gravity="center"
    android:padding="16dp">
    <ImageView
        android:id="@+id/imagprin"
        android:layout_width="165dp"
        android:layout_height="167dp"
        android:src="@drawable/ic_baseline_error_outline_24" />

    <TextView
        
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/Black"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/adv"
        android:textSize="16dp" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@color/Black"
        android:layout_marginBottom="32dp"
        android:text="@string/adv2"
        android:textSize="16dp" />



    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:background="@drawable/grad1"
        android:paddingHorizontal="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/irap" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_below="@+id/adView2"
    android:orientation="horizontal">


    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="16dp"
        android:id="@+id/activuser"
        android:layout_marginTop="10dp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activeu0" />

    <TextView
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="16dp"
        android:id="@+id/rublos_pag"
        android:layout_marginTop="10dp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp" />

</LinearLayout>

    <TextView
        android:id="@+id/iree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/gana_1_rublo_cada_vez_que_repondas_10_preguntas_correctamente"
        android:textColor="@color/Black"
        android:textSize="16dp" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/bannerid">
    </com.google.android.gms.ads.AdView>


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/presentacion">

        <ProgressBar
        android:layout_gravity="center"
            android:id="@+id/progreso1"
            android:layout_width="130dp"
            android:layout_height="130dp"/>

        <TextView
            android:layout_gravity="center"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/espera_un_momento_porfavor"
            android:id="@+id/textodepresentacion"/>




</LinearLayout>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adUnitId="@string/bannerid">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:id="@+id/registrotelef"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/preferido"
            android:textColor="@color/Black"
            android:textSize="16dp" />

        <EditText
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/refcodetopay"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:hint="  Ref Payeer id  "
            android:textColor="#fff"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/et_bg"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/login_form_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/pcontinuar"
            android:textColor="@color/Black"
            android:textSize="16dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textColor="@color/Black" />

            <EditText
                android:id="@+id/country_code_text"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginHorizontal="10dp"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/et_bg"
                android:hint="00"
                android:textColor="#fff"
                android:textSize="16dp" />

            <EditText
                android:inputType="number"
                android:id="@+id/phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginHorizontal="10dp"
                android:hint="000 000 00 00 "
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#fff"
                android:background="@drawable/et_bg"
                android:textSize="16dp" />


        </LinearLayout>

        <EditText
            android:id="@+id/numdecu"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:gravity="center"
            android:paddingRight="15dp"
            android:textColor="#fff"
            android:background="@drawable/et_bg"
            android:hint="   Payeer ID   " />

        <Button
            android:id="@+id/generate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="20dp"
            android:textColor="#fff"
            android:background="@drawable/btn_gradient_style"
            android:text="Continuar" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/cargando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/error3"
            android:textColor="@color/Black"
            android:textSize="16dp" />


    </LinearLayout>

    <Button
        android:background="@color/trans"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/trans"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/mensajeinformativo"
        >


        <TextView
            android:gravity="center"
            android:text="jajaj"
            android:textColor="@color/Black"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message2"/>



    </RelativeLayout>

</RelativeLayout>